fix header row fail to scroll and scrollbar style inconsistency

--- a/packages/cloud-cognitive/src/components/Datagrid/styles/datagrid.scss
+++ b/packages/cloud-cognitive/src/components/Datagrid/styles/datagrid.scss
@@ -134,7 +134,14 @@
     }
   }
 }
+.#{$block-class}__grid-container::-webkit-scrollbar-thumb {
+  background-color: $text-03;
+}
 
+.#{$block-class}__grid-container::-webkit-scrollbar {
+  width: 6px;
+  background-color: $ui-background;
+}
 .#{$block-class}__grid-container {
   display: block;
   overflow: auto;
@@ -150,7 +157,7 @@
 
   .#{$block-class}__table-simple {
     display: flex;
-    overflow: hidden;
+    overflow: auto;
     max-height: 100%;
     flex-direction: column;
   }
@@ -301,6 +308,7 @@
 }
 
 .#{$block-class}__simple-body {
+  display:table;
   position: relative;
   overflow-x: hidden;
   overflow-y: auto;
@@ -322,6 +330,14 @@
   min-width: 0 !important;
 }
 
+.#{$block-class}__table-simple::-webkit-scrollbar {
+  width: 6px;
+  background-color: $ui-background;
+}
+
+.#{$block-class}__table-simple::-webkit-scrollbar-thumb {
+  background-color: $text-03;
+}
 .#{$block-class}__sticky.#{$block-class}__simple-body {
   overflow: auto;
 }
